# rustWYRT

backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml
frontend/src/: main.rs
