[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Saad Moazzam"]

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = {version = "0.6.0", default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tokio-postgres = "0.7.13"
