[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
authors = ["Saad Moazzam"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["console"] }
gloo = "0.6"
wasm-bindgen-futures = "0.4.50"  
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
